[package]
name = "lovegood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "learn_macros",
    "learn_threads",
]

[dependencies]
async-std = { version = "1.10.0", features = ["attributes" ] }
futures-core = "0.3.17"
num_cpus = "1.13.0"
learn_macros = { path = "./learn_macros" }
learn_threads = { path = "./learn_threads" }

[lib]
name = "lovegood"
plugin = true

[[bin]]
name = "lt"
path = "./learn_threads/src/bin/main.rs"